Setup page default + nav
Import des fonts , création base de donnée admin et menu nav

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,6 +1,24 @@
 @import "layout/reset";
-@import"layout/fonts";
+
+
+
+
 @import "base/variable";
+
+
+
+@import"layout/fonts";
+@import "layout/global";
 @import "layout/header";
 @import "layout/footer";
+
+
+
+
+
 @import "components/sticker";
+
+
+
+
+@import "pages/front-page";
