--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Theme Name: Mon thème
+/* Theme Name: Thème portesvoie
 Theme URI: https://www.url.com/
 Author: Axel Genin
 Author URI: https://www.portes-voies.fr/
