--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -7,7 +7,7 @@
 
 
 
-@import"layout/fonts";
+@import "layout/fonts";
 @import "layout/global";
 @import "layout/header";
 @import "layout/footer";
@@ -20,5 +20,5 @@
 
 
 
-
+@import "pages/page-simple";
 @import "pages/front-page";
