--- a/assets/scss/pages/_page-simple.scss
+++ b/assets/scss/pages/_page-simple.scss
@@ -9,6 +9,11 @@ section.vous-etes {
         font-family: raleway;
     }
 
+    p{
+        font-size: 20px;
+        line-height: 1.4;
+    }
+
     .title-background{
 
         width: 100%;
