--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -101,10 +101,6 @@ header {
   background-color: white;
   width: 100%;
 }
-header .current-menu-ancestor:hover ul {
-  display: block;
-  background-color: rgb(250, 0, 0);
-}
 header .header_wrapper {
   display: flex;
   align-items: center;
@@ -114,6 +110,10 @@ header .header_wrapper {
 header .menu-main_nav-container > ul {
   display: flex;
   gap: 46px;
+}
+header .menu-main_nav-container > ul > li:hover ul {
+  display: flex;
+  background-color: #006AC4;
 }
 header .menu-main_nav-container li {
   font-family: "raleway";
@@ -132,19 +132,52 @@ header img {
   height: 80px;
 }
 header ul .sub-menu {
-  display: flex;
   flex-direction: column;
   position: absolute;
   padding: 50px 20px;
-  background-color: red;
+  background-color: #006AC4;
   text-align: center;
   left: 50%;
   transform: translateX(-50%);
   display: none;
+  gap: 20px;
+  border-radius: 5px;
+  width: 210px;
+  top: calc(100% + 20px);
+}
+header ul .sub-menu:before {
+  position: absolute;
+  top: -20px;
+  left: 0;
+  width: 100%;
+  height: 20px;
+  content: "";
+}
+header ul .sub-menu a {
+  color: white;
+  font-weight: bold;
 }
 header ul .sub-menu li {
   width: 100%;
-  padding: auto 20px;
+}
+
+.footer_contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 80px;
+}
+.footer_contact._text {
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 38px;
+}
+.footer_contact a {
+  text-decoration: none;
+  width: 156px;
+  height: 71px;
+  background-image: url("assets/img/bouton.png");
 }
 
 footer {
@@ -177,8 +210,31 @@ div.sticker {
   background-color: blue;
 }
 
+.contact {
+  background-color: yellow;
+  width: 100%;
+}
+.contact .wpforms-container {
+  padding: 80px 300px;
+}
+.contact .wpforms-container #wpforms-form-100 input {
+  border-radius: 5px;
+}
+.contact .wpforms-submit-container .wpforms-submit {
+  border-radius: 5px;
+  background-color: black;
+}
+.contact div.wpforms-container-full .wpforms-form button[type=submit] {
+  background-color: black;
+  color: white;
+}
+
 section.vous-etes p, section.vous-etes h2, section.vous-etes h1, section.vous-etes a {
   font-family: raleway;
+}
+section.vous-etes p {
+  font-size: 20px;
+  line-height: 1.4;
 }
 section.vous-etes .title-background {
   width: 100%;
