--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,5 +1,34 @@
 
 
+
+.footer_contact{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 80px;
+
+  &._text{
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 38px;
+    
+
+  }
+
+  a{
+    text-decoration: none;
+    width: 156px;
+    height: 71px;
+    background-image: url("assets/img/bouton.png");
+    
+  }
+}
+
+
+
+
+
   footer {
   background-color: #1E96FC;
   height: 300px;
