--- a/assets/scss/pages/_front-page.scss
+++ b/assets/scss/pages/_front-page.scss
@@ -3,3 +3,171 @@ h1{
 }
 
 
+.main {
+    .heading-block{
+        padding: 120px 0px;
+        .wrapper_big{
+            display: flex;
+            flex-direction: row;
+            align-items:center;
+            gap: 80px  ;
+
+        }
+
+        
+        .heading-image{
+            width: 30%;
+            height: auto;
+            flex-shrink: 0;
+
+            @media screen and (max-width:768px) {
+                display: none;
+            }
+
+            & img{
+                width: 100%;
+               height: auto;
+            }
+           
+        }
+        .heading-text{
+
+            .title-text {
+                font-weight: 800;
+                font-size: 80px;
+                line-height: 94px;
+
+                @media screen and (max-width:768px) {
+                    font-size: 40px;
+                line-height: 45px;
+                }
+            }
+           
+        }
+    }
+
+
+    .group-stickers{
+        display: flex;
+        justify-content: center;
+        gap: 25px ;
+        flex-wrap: wrap;
+
+        .sticker-body{
+            width: 310px;
+            height: 360px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;    
+            border-radius: 30px;
+            .sticker-content{
+                height: 100%;
+                gap:30px   ;
+                padding: 0px 30px;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+
+                p {
+                    font-weight: 400;
+                    font-size: 20px;
+                    line-height: 123.4%;
+
+                    &.title {
+                    
+                            font-weight: 600;
+                        font-size: 32px;
+                        line-height: 38px
+                    }
+                }
+        }
+
+
+            .sticker-element{
+                width: 74px;
+                height: 4px;
+            }
+
+            
+        img{
+            height: 69px;
+            width: 69px;
+            display: block;
+        }
+            
+        }
+    }
+}
+
+
+
+
+.cards-block{
+
+
+    .block{
+        
+    }
+    .cards{
+        gap: 25px ;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+
+        @media screen and (max-width:768px) {
+            flex-direction: column;
+            align-items: center;
+        }
+        .card-body{
+
+            width: 310px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            border-radius: 30px;    
+            gap:30px;
+
+            @media screen and (max-width:768px) {
+                border: 2px solid;
+
+                &.jaune {border-color: #FCF300;}
+                &.violet {border-color: #C25FFF;}
+                &.bleu {border-color: #1E96FC;}
+                &.vert {border-color: #4AEBA8;}
+
+
+
+            }
+            .card-image{
+                width: 100%;
+                img{
+                    display: block;
+                    width: 100%;
+                    border-radius: 30px 30px 0px 0px;  
+
+                }
+            }
+
+            .card-content{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;    
+                gap:18px   ;
+                padding: 0px 10px;
+            
+
+                .title{
+                }
+
+                p{
+                }
+
+                .button{
+                    align-self: center;
+
+                }
+            }
+        }
+    }
+}
