--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -18,7 +18,8 @@
 
 @import "components/sticker";
 
-
+@import"pages/la-cooperative";
+@import"pages/a-propos";
 @import "pages/contact";
 @import "pages/page-simple";
 @import "pages/front-page";
